# contour-depth

./: .gitignore  LICENSE  README.md  boxplot_demo.py  clustering_demo.py  pyproject.toml  visualize.py
napari_demo/: README.md  data_loader.py  napari_viewer.py
src/contour_depth/: __init__.py  cluster.py  depth.py  synthetic_data.py  visualization.py
